# rusty-chip-8-emu

./: Cargo.toml  LICENSE  Makefile.toml  README.md  config.yml
.github/workflows/: build.yml  rust.yml
src/: emulator.rs  errors.rs  main.rs  runner.rs  vm.rs
src/emulator/: emulator.rs  input.rs
src/vm/: audio.rs  config.rs  constants.rs  debugger.rs  display.rs  input.rs  opcodes.rs  timer.rs  vm.rs
